--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,5 +20,6 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:28.0.0'
+    compile 'com.anthonycr.grant:permissions:1.0'
     compile project(':nodemediaclient')
 }
